--- a/chart/templates/ingresses/ingress-postgres.yaml
+++ b/chart/templates/ingresses/ingress-postgres.yaml
@@ -1,20 +1,29 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: in-postgres
+  # name of the ingress resource. -ingress suffix as suggestion for clear naming convention
+  name: ingress
   annotations:
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
-  labels:
-    app.kubernetes.io/instance: in-postgres
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
-  - host: postgres.dev.demo.catena-x.net
-    http:
-      paths:
-      - backend:
-          serviceName: hazelcast-service
-          servicePort: 80
-        path: /
-
+    # IMPORTANT: specifies the entrypoint (domain), myApp will be accessible from
+    - host: postgres.dev.demo.catena-x.net
+      http:
+        paths:
+          # specific path the app should be reachable on the host
+          # complete URL for the app consists of host AND path
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
+                # Adjust that to your service name
+                name: hazelcast-service
+                port:
+                  # Port number, the kubernetes service is listening on
+                  # Adjust that to your services' port
+                  number: 80
