--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,66 +1,119 @@
-appname: mstemplate
-namespace: template
-project: hazelcast
-ociSecret:
-  name: regcred
-ingress:
-  domainName: .k8s-dev.readinessit.net
-embedded:
-  replicaCount: 0
-  image:
-    repository: uk-london-1.ocir.io/lrtwjejdpkcc/templates/mstemplate
-    tag: hazelcast-0.0.60
-    pullPolicy: IfNotPresent
-  configMap:
-    env:
-      SPRING_PROFILES_ACTIVE: prod
-      APP_HAZELCAST_INSTANCE-NAME: mstemplate
-      APP_HAZELCAST_HAZELCAST-CONFIG_KUBERNETES: true
-      APP_HAZELCAST_HAZELCAST-CONFIG_NAMESPACE: template
-      APP_HAZELCAST_HAZELCAST-CONFIG_SERVICENAME: mstemplate-service-embedded
-external:
-  replicaCount: 0
-  image:
-    repository: uk-london-1.ocir.io/lrtwjejdpkcc/templates/mstemplate
-    tag: hazelcast-0.0.61
-    pullPolicy: IfNotPresent
-  configMap:
-    env:
-      SPRING_PROFILES_ACTIVE: prod
-      APP_HAZELCAST_INSTANCE-NAME: mstemplate
-      APP_HAZELCAST_HAZELCAST-CONFIG_KUBERNETES: true
-      APP_HAZELCAST_HAZELCAST-CONFIG_NAMESPACE: template
-      APP_HAZELCAST_HAZELCAST-CONFIG_EXTERNAL-SERVICENAME: hazelcast-service:80
+# Default values for vas.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
 
-configRefresh:
-  replicaCount: 1
-  image:
-    repository: uk-london-1.ocir.io/lrtwjejdpkcc/templates/mstemplate
-    tag: refresh-0.0.74
-    pullPolicy: IfNotPresent
-  configMap:
-    env:
-      application.yml: |-
-        app.changesimpplevar: TEST-REFRESH
-        app.stringMap.changevar: TEST-REFRESH
-        app.stringMap.changevarnotexists: NO-EXISTS-REFRESH
+replicaCount: 1
+
+image:
+  registry: ghcr.io
+  repository: ghcr.io/catenax-ng/product-value-added-service
+  pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "main"
+
+appName: catenax-vas
+environment: dev
+
+imagePullSecrets: [ ]
+
+podAnnotations: { }
+
+podSecurityContext:
+  fsGroup: 2000
+
+#Spring profiles under which the application should run
+springProfiles:
+  - dev
+
+# Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
+# @url: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
+securityContext:
+  allowPrivilegeEscalation: false
+  runAsNonRoot: true
+  runAsUser: 10001
+  runAsGroup: 3000
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
-  port: 30000
-  targetPort: 8081
-  protocol: TCP
-  name: http
+  port: 8080
+
+autoscaling:
+  enabled: false
+
+ingress:
+  enabled: true
 
 
-hazelcast:
-  appname: hazelcast
-  replicaCount: 2
-  image:
-    repository: hazelcast/hazelcast
-    tag: 3.12.8
-    pullPolicy: IfNotPresent
-  service:
-    type: ClusterIP
-    port: 80
-    targetPort: 5701
+# Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
+# @url: https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-best-practices-resource-requests-and-limits
+resources:
+  limits:
+    cpu: 800m
+    memory: 2Gi
+  requests:
+    cpu: 300m
+    memory: 1Gi
+
+nodeSelector: { }
+
+tolerations: [ ]
+
+# Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
+# @url: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
+affinity:
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/name
+                operator: DoesNotExist
+          topologyKey: kubernetes.io/hostname
+
+# Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
+# @url: https://github.com/helm/charts/blob/master/stable/nginx-ingress/values.yaml#L210
+livenessProbe:
+  failureThreshold: 3
+  initialDelaySeconds: 60
+  periodSeconds: 10
+  successThreshold: 1
+  timeoutSeconds: 1
+  path: /management/health/liveness
+  port: 8080
+readinessProbe:
+  failureThreshold: 3
+  initialDelaySeconds: 60
+  periodSeconds: 10
+  successThreshold: 1
+  timeoutSeconds: 1
+  path: /management/health/readiness
+  port: 8080
+
+applicationSecret:
+  enabled: false
+  keycloak: <path:vas/data/dev/keycloak#credentials-secret>
+  cdq: <path:vas/data/dev/cdq#api-key>
+
+configmap:
+  # Specifies whether a configmap should be created
+  create: true
+  data:
+    spring_profiles_active: dev
+
+elastic:
+  enabled: false
+  security:
+    tls:
+      restEncryption: false
+
+postgres:
+  enabled: true
+  auth:
+    database: vas
+    postgresPassword: <path:vas/data/dev/postgresql#postgres-password>
+    username: vas
+    password: <path:vas/data/dev/postgresql#password>
