--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -10,6 +10,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
+  ingressClassName: {{ .Values.ingress.className }}
   rules:
     # IMPORTANT: specifies the entrypoint (domain), myApp will be accessible from
     - host: {{ .Values.appName }}-{{ .Values.environment }}.demo.catena-x.net
@@ -30,7 +31,7 @@ spec:
                   number: {{ .Values.service.port }}
   tls:
     - hosts:
-        - {{ .Values.appName }}.{{ .Values.environment }}.demo.catena-x.net
+        - {{ .Values.appName }}-{{ .Values.environment }}.demo.catena-x.net
       # Default secret for certificate creation already provided to your namespace
       secretName: tls-secret
 
