--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -106,6 +106,23 @@ configmap:
     spring_profiles_active: dev
     APPLICATION_HOST: http://localhost:8080
 
+embedded:
+  appname: mstemplate
+  replicaCount: 1
+  image:
+    repository: ghcr.io/catenax-ng/product-value-added-service
+    tag: main
+    pullPolicy: IfNotPresent
+  configMap:
+    env:
+      spring_profiles_active: dev
+      APPLICATION_HOST: http://localhost:8080
+  service:
+    type: ClusterIP
+    port: 8080
+    targetPort: 8080
+    protocol: TCP
+    name: http
 
 elastic:
   enabled: false
