--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -104,7 +104,7 @@ configmap:
   create: true
   data:
     spring_profiles_active: dev
-    APPLICATION_HOST: http://localhost:8080
+    APPLICATION_HOST: http://mstemplate-service-embedded/api/schedule
 
 embedded:
   appname: mstemplate
