--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -18,6 +18,7 @@ spec:
           # specific path the app should be reachable on the host
           # complete URL for the app consists of host AND path
           - path: /
+            pathType: ImplementationSpecific
             backend:
               service:
                 # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
