--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -12,18 +12,18 @@ spec:
   ingressClassName: {{ .Values.ingress.className }}
   rules:
     # IMPORTANT: specifies the entrypoint (domain), myApp will be accessible from
-    - host: {{ .Values.appName }}-{{ .Values.environment }}.demo.catena-x.net
+    - host: {{ .Values.appName }}.{{ .Values.environment }}.demo.catena-x.net
       http:
         paths:
           # specific path the app should be reachable on the host
           # complete URL for the app consists of host AND path
           - path: /
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
                 # Adjust that to your service name
-                name: {{ include "vas.fullname" . }}
+                name: {{ include "vas.fullname" . }}-service
                 port:
                   # Port number, the kubernetes service is listening on
                   # Adjust that to your services' port
