--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
                   key: password
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           # @url: https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-best-practices-setting-up-health-checks-with-readiness-and-liveness-probes
           livenessProbe:
