try ingress psql

--- a/chart/templates/ingress-postgress.yaml
+++ b/chart/templates/ingress-postgress.yaml
@@ -19,11 +19,11 @@ spec:
               service:
                 # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
                 # Adjust that to your service name
-                name: project-value-added-service-postgres-hl
+                name: project-value-added-service-postgres-service
                 port:
                   # Port number, the kubernetes service is listening on
                   # Adjust that to your services' port
-                  number: {{ .Values.postgres.service.port }}
+                  number: 80
   tls:
     - hosts:
         - {{ .Values.postgres.appName }}-{{ .Values.postgres.environment }}.demo.catena-x.net
