try ingress psql

--- a/chart/templates/service-postgres.yaml
+++ b/chart/templates/service-postgres.yaml
@@ -17,7 +17,7 @@ spec:
       protocol: TCP
     - name: postgres
       port: {{ .Values.postgres.service.port }}
-      targetPort: {{ .postgres.Values.service.port }}
+      targetPort: {{ .Values.postgres.service.port }}
       protocol: TCP
 
   selector:
