--- a/chart/templates/service-postgres.yaml
+++ b/chart/templates/service-postgres.yaml
@@ -21,4 +21,6 @@ spec:
       protocol: TCP
 
   selector:
-    {{- include "vas.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: primary
+    app.kubernetes.io/instance: project-value-added-service
+    app.kubernetes.io/name: postgres
