--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -133,3 +133,25 @@ postgres:
   service:
     type: ClusterIP
     port: 5432
+
+pgadmin4:
+  enabled: true
+  secret:
+    path: portal/data/dev/pgadmin4
+  env:
+    email: portal@catena-x.net
+  existingSecret: secret-pgadmin4
+  ingress:
+    enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/ingress.class: nginx
+    hosts:
+      - host: vas-pgadmin4.dev.demo.catena-x.net
+        paths:
+        - path: /
+          pathType: Prefix
+    tls:
+      - hosts:
+        - vas-pgadmin4.dev.demo.catena-x.net
+        secretName: vas-pgadmin4.dev.demo.catena-x.net-tls
