--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -38,12 +38,12 @@ spec:
             - configMapRef:
                 name: config-backend
           env:
-            - name: APPLICATION_name
-              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
             - name: VAS_DATASOURCE_HOST
               value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
             - name: VAS_DATASOURCE_USER
               value: {{ .Values.postgres.auth.username }}
+            - name: APPLICATION_NAME
+              value: {{ .Values.postgres.auth.postgresPassword }}
             - name: VAS_DATASOURCE_PASS
               valueFrom:
                 secretKeyRef:
