implement database, implement first apis for develop and creation of liquibase and pg admin ingress for access database

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ vas:
 spring:
   application:
     name: value-added-service
+  liquibase:
+    change-log: classpath:config/liquibase/master.xml
+    enabled: true
 
 application:
   name: default
