--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<liquibase.version>4.6.1</liquibase.version>
 		<liquibase-hibernate5.version>4.6.1</liquibase-hibernate5.version>
 		<spring-boot.version>2.6.6</spring-boot.version>
+		<org.zalando.problem-spring-web>0.26.2</org.zalando.problem-spring-web>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -74,6 +75,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<!-- Inherited version from Spring Boot can't be used because of regressions -->
 			<version>${liquibase.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>problem-spring-web</artifactId>
+			<version>${org.zalando.problem-spring-web}</version>
 		</dependency>
 	</dependencies>
 
