try argoCd secrets

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -107,6 +107,7 @@ configmap:
   create: true
   data:
     spring_profiles_active: dev
+    APPLICATION_NAME: <path:vas/data/dev/postgresql#newkey>
     APPLICATION_HOST: http://localhost:8080/api/dashboard
     JAVA_OPTS: " -Xmx256m -Xms256m -Djavax.net.ssl.trustStore=/var/run/secrets/java.io/keystores/truststore.jks -Djavax.net.ssl.trustStorePassword=changeit"
 
