--- a/chart/templates/argo-manifest.yaml
+++ b/chart/templates/argo-manifest.yaml
@@ -1,19 +1,20 @@
-project: project-value-added-service
 apiVersion: argoproj.io/v1alpha1
 kind: Application
-source:
-  repoURL: 'https://github.com/catenax-ng/product-value-added-service'
-  path: chart
-  targetRevision: HEAD
-  helm:
-    valueFiles:
-      - values.yaml
-      - values-dev.yaml
-  plugin:
-    name: argocd-vault-plugin-helm
-    env:
-      - name: AVP_SECRET
-        value: '-f values.yaml -f values-dev.yaml'
-destination:
-  server: 'https://kubernetes.default.svc'
-  namespace: product-value-added-service
+spec:
+  destination:
+    server: 'https://kubernetes.default.svc'
+    namespace: product-value-added-service
+  project: project-value-added-service
+  source:
+    repoURL: 'https://github.com/catenax-ng/product-value-added-service'
+    path: chart
+    targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values.yaml
+        - values-dev.yaml
+    plugin:
+      name: argocd-vault-plugin-helm
+      env:
+        - name: AVP_SECRET
+          value: '-f values.yaml -f values-dev.yaml'
