--- a/chart/templates/secret-pgadmin4.yaml
+++ b/chart/templates/secret-pgadmin4.yaml
@@ -1,10 +1,10 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  annotations:
-    avp.kubernetes.io/path: {{ .Values.pgadmin4.secret.path }}
-  name: secret-pgadmin4
-  namespace: {{ .Release.Namespace }}
-type: Opaque
-stringData:
-  password: password
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#  annotations:
+#    avp.kubernetes.io/path: {{ .Values.pgadmin4.secret.path }}
+#  name: secret-pgadmin4
+#  namespace: {{ .Release.Namespace }}
+#type: Opaque
+#stringData:
+#  password: password
