--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -135,22 +135,24 @@ postgres:
     type: ClusterIP
     port: 5432
 
-#pgadmin4:
-#  enabled: true
-#  env:
-#    email: vas@catena-x.net
-#    password: password
-#  ingress:
-#    enabled: true
-#    annotations:
-#      cert-manager.io/cluster-issuer: letsencrypt-prod
-#      kubernetes.io/ingress.class: nginx
-#    hosts:
-#      - host: vas-pgadmin4.dev.demo.catena-x.net
-#        paths:
-#        - path: /
-#          pathType: Prefix
-#    tls:
-#      - hosts:
-#        - vas-pgadmin4.dev.demo.catena-x.net
-#        secretName: vas-pgadmin4.dev.demo.catena-x.net-tls
+pgadmin4:
+  enabled: true
+  secret:
+    path: vas/data/dev/pgadmin4
+  env:
+    email: vas@catena-x.net
+    password: password
+  ingress:
+    enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/ingress.class: nginx
+    hosts:
+      - host: vas-pgadmin4.dev.demo.catena-x.net
+        paths:
+        - path: /
+          pathType: Prefix
+    tls:
+      - hosts:
+        - vas-pgadmin4.dev.demo.catena-x.net
+        secretName: vas-pgadmin4.dev.demo.catena-x.net-tls
