--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,6 +6,16 @@ spring:
     activate:
       on-profile: local
 
+#  datasource:
+#    username: user
+#    url: jdbc:postgresql://localhost:5432/database
+#    driverClassName: org.postgresql.Driver
+#    password: password
+#  jpa:
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    properties:
+#      hibernate:
+#        default_schema: public
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:h2:file:./target/h2db/db/vas;DB_CLOSE_DELAY=-1
