--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -4,6 +4,20 @@ image:
 springProfiles:
   - dev
 
+
+appName: vas-country-risk-backend
+environment: dev
+
 ingress:
   host: catenax-vas-dev.demo.catena-x.net
 
+configmap:
+  # Specifies whether a configmap should be created
+  data:
+    spring_profiles_active: dev
+    APPLICATION_HOST: http://localhost:8080/api/dashboard
+
+postgres:
+  auth:
+    postgresPassword: <path:value-added-service/data/dev/postgresql#postgres-password>
+    password: <path:value-added-service/data/dev/postgresql#password>
