--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - 'main'
-      - 'feature/**'
+      - 'dev'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
