--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -8,6 +8,13 @@ springProfiles:
 appName: vas-country-risk-backend
 environment: dev
 
+image:
+  registry: ghcr.io
+  repository: ghcr.io/catenax-ng/product-value-added-service
+  pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "dev"
+
 ingress:
   host: catenax-vas-dev.demo.catena-x.net
 
