--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,19 @@
 			<artifactId>problem-spring-web</artifactId>
 			<version>${org.zalando.problem-spring-web}</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-oauth2-client</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.keycloak</groupId>-->
+<!--			<artifactId>keycloak-spring-boot-starter</artifactId>-->
+<!--			<version>18.0.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
