--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,39 @@ spring:
     change-log: classpath:config/liquibase/master.xml
     enabled: true
 
+#  security:
+#    oauth2:
+#      client:
+#        provider:
+#          oidc:
+#            issuer-uri: https://centralidp.dev.demo.catena-x.net/auth/realms/CX-Central
+
+#      client:
+#        provider:
+#          keycloak:
+#            token-uri: https://centralidp.dev.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token
+#        registration:
+#          keycloak:
+#            client-id: sa-cl7-cx-2
+#            client-secret: BY79UOdY5LsP8QNK2A29yZYALPgcA2zj
+#            authorization-grant-type: client_credentials
+#            scope: openid,profile,email
+#      resourceserver:
+#        jwt:
+#          issuer-uri: https://centralidp.dev.demo.catena-x.net/auth/realms/CX-Central
+
+
+#keycloak:
+#  realm: CX-Central
+#  auth-server-url: https://centralidp.dev.demo.catena-x.net/auth
+#  resource: sa-cl7-cx-2
+#  bearer-only: true
+#  credentials.secret: BY79UOdY5LsP8QNK2A29yZYALPgcA2zj
+#  public-client: false
+#  use-resource-role-mappings: true
+#  principal-attribute: preferred_username
+#  ssl-required: NONE
+
 application:
   name: default
   host: project-value-added-service-vas/api/dashboard
