--- a/chart/templates/application-secret.yaml
+++ b/chart/templates/application-secret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ include "vas.applicationSecret.name" . }}
 type: Opaque
 stringData:
-  keycloak-secret: {{ .Values.applicationSecret.keycloak }}
-  cdq-key: {{ .Values.applicationSecret.cdq }}
+  keycloak-secret: {{ .Values.applicationSecret.client-secret }}
+  client-id: {{ .Values.applicationSecret.client-id }}
 
 {{- end }}
