--- a/src/main/resources/application-int.yml
+++ b/src/main/resources/application-int.yml
@@ -3,6 +3,20 @@ spring:
   config:
     activate:
       on-profile: int
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            authorization-grant-type: client_credentials
+            client-id:
+            client-secret:
+        provider:
+          keycloak:
+            token-uri: https://centralidp.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token
+      resourceserver:
+        jwt:
+          jwk-set-uri: https://centralidp.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/certs
 
 application:
   name: int
