--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,7 +5,6 @@ spring:
   config:
     activate:
       on-profile: local
-
 #  datasource:
 #    username: user
 #    url: jdbc:postgresql://localhost:5432/database
@@ -35,6 +34,9 @@ spring:
       hibernate:
         show_sql: false
         format_sql: true
+
+security:
+  enabled: true
 
 cors:
   origins: >
