--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>problem-spring-web</artifactId>
 			<version>${org.zalando.problem-spring-web}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.11</version>
+		</dependency>
 
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
