--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'dev'
+      - 'swagger'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
