--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -13,7 +13,7 @@ image:
   repository: ghcr.io/catenax-ng/product-value-added-service
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "dev"
+  tag: "swagger"
 
 ingress:
   host: catenax-vas-dev.demo.catena-x.net
