--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<liquibase-hibernate5.version>4.6.1</liquibase-hibernate5.version>
 		<spring-boot.version>2.6.6</spring-boot.version>
 		<org.zalando.problem-spring-web>0.26.2</org.zalando.problem-spring-web>
+		<org.springdoc.springdoc-openapi-ui>1.6.11</org.springdoc.springdoc-openapi-ui>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -84,7 +85,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.11</version>
+			<version>${org.springdoc.springdoc-openapi-ui}</version>
 		</dependency>
 
 		<dependency>
