--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -26,3 +26,5 @@ spring:
 application:
   name: dev
   host: http://project-value-added-service-vas/api/schedule
+  partnersPoolUrl:
+    legalEntities: 'https://partners-pool.dev.demo.catena-x.net/api/catena/legal-entities'
