--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -23,6 +23,7 @@ configmap:
   data:
     spring_profiles_active: dev
     APPLICATION_HOST: http://localhost:8080/api/dashboard
+    SECURITY_ENABLED: false
 
 postgres:
   auth:
