--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -22,7 +22,8 @@ configmap:
   # Specifies whether a configmap should be created
   data:
     spring_profiles_active: dev
-    SECURITY_ENABLED: false
+    APPLICATION_HOST: http://localhost:8080/api/dashboard
+    SECURITY_ENABLED: 'false'
 
 postgres:
   auth:
