--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,35 +6,35 @@ spring:
     activate:
       on-profile: local
 
-#  datasource:
-#    username: postgres
-#    url: jdbc:postgresql://localhost:5432/postgres
-#    driverClassName: org.postgresql.Driver
-#    password: root
-#  jpa:
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
-#    properties:
-#      hibernate:
-#        default_schema: public
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:h2:file:./target/h2db/db/vas;DB_CLOSE_DELAY=-1
-    username: vas
-    password:
-    hikari:
-      poolName: Hikari
-      auto-commit: false
-  h2:
-    console:
-      enabled: true
-
+    username: user
+    url: jdbc:postgresql://localhost:5432/database
+    driverClassName: org.postgresql.Driver
+    password: password
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    database: H2
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
-        show_sql: false
-        format_sql: true
+        default_schema: public
+#  datasource:
+#    type: com.zaxxer.hikari.HikariDataSource
+#    url: jdbc:h2:file:./target/h2db/db/vas;DB_CLOSE_DELAY=-1
+#    username: vas
+#    password:
+#    hikari:
+#      poolName: Hikari
+#      auto-commit: false
+#  h2:
+#    console:
+#      enabled: true
+#
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    database: H2
+#    properties:
+#      hibernate:
+#        show_sql: false
+#        format_sql: true
 
 security:
   enabled: false
