--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,16 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: ${vas.authentication-url.jwk-set-uri}
-
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        show_sql: false
+        format_sql: true
+        types:
+          print:
+            banner: false
 security:
   enabled: true
 
